# bowers

./: Cargo.toml  README.md
.github/workflows/: rust.yml
crates/bower-core/: Cargo.toml
crates/bower-core/src/: lib.rs
crates/bower-core/src/data/: bbox.rs  images.rs  mask.rs  mod.rs  point.rs  polygon.rs
crates/bower-core/src/image_processing/: crop.rs  mod.rs
crates/bower-core/src/image_processing/image_rs/: mod.rs
crates/bower-core/tests/: data.rs  image_processing.rs
crates/bower-image/: Cargo.toml
crates/bower-internal/: Cargo.toml
crates/bower-opencv/: Cargo.toml
