[package]
name = "bowers"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/RustyNNFlow/bowers"

[workspace]
members = ["crates/*"]

[dependencies]
bower-internal = { path = "crates/bower-internal" }

[features]
image-rs = ["bower-internal/image-rs"]
