[package]
name = "bower-core"
version = "0.1.0"
authors = ["leonzhao"]
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
image-rs = ["image", "imageproc"]

[dependencies]
image = {version = "0.24.1", optional = true}
imageproc = {version = "0.22.0", optional = true}
# opencv = {version = "0.63.0", optional = true}
anyhow = "1.0"
